CBENEFIOS-2005 - bump ktlint and detekt
bump ktlint and detekt